[gd_scene load_steps=7 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://TitleText.tscn" type="PackedScene" id=3]
[ext_resource path="res://snd/FX/High School Menu Music.wav" type="AudioStream" id=4]
[ext_resource path="res://PlayButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://snd/FX/UI menu start game_01.wav" type="AudioStream" id=6]

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]
offset = Vector2( 300, 400 )
transform = Transform2D( 1, 0, 0, 1, 300, 400 )

[node name="TitleText" parent="." instance=ExtResource( 3 )]
position = Vector2( 170, 90 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
autoplay = true

[node name="PlayButton" parent="." instance=ExtResource( 5 )]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 600.0
margin_bottom = 800.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="StartPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
